# Amianom

./: Modulus_transmutator.py  Modulus_vocis_recognitio.py  README.md  main.py  settings.py  test.py  test_2.py
Scriptores/: re - Copy.py  re.py
poetry/: pyproject.toml
