[tool.poetry]
name = "amianom"
version = "0.1.0"
description = ""
authors = ["Isfireomat <dfdfgfgf666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.3"
vosk = "^0.3.45"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
